updated for gemlib 0.44.0

--- a/gemlib/gemlib.spec.in
+++ b/gemlib/gemlib.spec.in
@@ -82,6 +82,9 @@ ln -s %{_prefix}/include/mt_gemx.h ${RPM_BUILD_ROOT}%{_prefix}/GEM/include/
 
 
 %changelog
+* Sun Jan 17 2016 Arnaud Bercegeay <arnaud.bercegeay@free.fr>
+- updated to version 0.44.0
+
 * Mon Dec 19 2005 Arnaud Bercegeay <arnaud.bercegeay@free.fr>
 - updated to version 0.43.6
 
