--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
 
   - wget -O .travis/download_prerequisities.sh "${BASE_RAW_URL}/travis-scripts/master/download_prerequisities.sh"
   - sh ./.travis/download_prerequisities.sh
-  - sh ./.travis/install-cross-mint.sh trusty gcc-m68k-atari-mint binutils-m68k-atari-mint mintlib-m68k-atari-mint > /dev/null
+  - sh ./.travis/install-cross-mint.sh gcc-m68k-atari-mint binutils-m68k-atari-mint mintlib-m68k-atari-mint > /dev/null
   
 before_script:
   - . ./.travis/setup_env.sh
