--- a/gemma/configtool/Makefile
+++ b/gemma/configtool/Makefile
@@ -1,14 +1,13 @@
 #
 # Makefile for gemma, a minimal GEM library
 #
-TARGET = gemma.app
 
 SHELL = /bin/sh
 SUBDIRS = 
 
 srcdir = .
 top_srcdir = ../..
-subdir = src
+subdir = configtool
 
 default: all
 
@@ -18,22 +17,46 @@ include $(top_srcdir)/PHONY
 
 CFLAGS += -Wno-inline
 
-all-here: $(TARGET)
-
-# default overwrites
-INCLUDES += -I../include/
-GENERAL += 
+all-here: apps
 
 # default definitions
-OBJS =  $(SOBJS:.S=.o) $(COBJS:.c=.o)
-LDFLAGS = -nostartfiles -nostdlib -L../libgemma/
-LIBS = -lgemma -lgcc
-GENFILES = $(TARGET)
+GENFILES = .lib* gemma*.app
+
+ALL_APPS = normal
+
+ifeq ($(WITH_020_LIB),yes)
+ALL_APPS += normal020
+endif
+
+ifeq ($(WITH_V4E_LIB),yes)
+ALL_APPS += normalv4e
+endif
+
+apps: $(ALL_APPS)
+
+normal:
+	$(MAKE) gemma.app TARGET=""
+
+normal020:
+	$(MAKE) gemma020.app TARGET="020"
+
+normalv4e:
+	$(MAKE) gemmav4e.app TARGET="v4e"
 
 
-$(TARGET): $(OBJS)
-	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $(OBJS) $(LIBS)
-	$(STRIP) $@
+gemma$(TARGET).app: objs
+	rm -f $@
+	cp .lib$(TARGET)/gemma.app $@
 
+objs: .lib$(TARGET)
+	cd .lib$(TARGET); $(MAKE)
+.PHONY: objs
+
+.lib$(TARGET): Makefile.objs
+	$(MKDIR) -p $@
+	$(CP) Makefile.objs $@/Makefile
+
+clean::
+	rm -rf .lib* gemma*.app
 
 include $(top_srcdir)/DEPENDENCIES
