--- a/gemma/libgemma/Makefile.objs
+++ b/gemma/libgemma/Makefile.objs
@@ -27,6 +27,10 @@ ifeq ($(TARGET),020)
 GENERAL += -m68020-60
 endif
 
+ifeq ($(TARGET),v4e)
+GENERAL += -mcpu=5475
+endif
+
 ifeq ($(TARGET),_mt)
 DEFINITIONS += -DGEMMA_MULTIPROC
 endif
