--- a/gemma/configtool/Makefile.objs
+++ b/gemma/configtool/Makefile.objs
@@ -43,8 +43,8 @@ GENFILES = gemma.app
 VPATH = ..
 
 gemma.app: $(OBJS)
-	$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $(OBJS) $(LIBS)
-	$(STRIP) $@
+	$(AM_V_CCLD)$(CC) -o $@ $(CFLAGS) $(LDFLAGS) $(OBJS) $(LIBS)
+	$(AM_V_STRIP)$(STRIP) $@
 
 
 include $(top_srcdir)/DEPENDENCIES
