--- a/RULES
+++ b/RULES
@@ -5,6 +5,84 @@ include $(srcdir)/SRCFILES
 include $(srcdir)/EXTRAFILES
 include $(srcdir)/MISCFILES
 
+AM_DEFAULT_VERBOSITY = 0
+
+ifeq ($(TERM),xterm)
+am__v_color_cc=\033[27;32m
+am__v_color_ld=\033[27;34m
+am__v_color_rc=\033[27;36m
+am__v_color_off=\033[m
+endif
+
+ifeq ($(ECHO_E),)
+ECHO_E=echo -e
+endif
+
+am__v_CC_0     = @$(ECHO_E) "  $(am__v_color_cc)CC$(am__v_color_off)      " $@;
+am__v_CC_1     = 
+am__v_CC_      = $(am__v_CC_$(AM_DEFAULT_VERBOSITY))
+AM_V_CC        = $(am__v_CC_$(V))
+
+am__v_CXX_0    = @$(ECHO_E) "  $(am__v_color_cc)CXX$(am__v_color_off)     " $@;
+am__v_CXX_1    = 
+am__v_CXX_     = $(am__v_CXX_$(AM_DEFAULT_VERBOSITY))
+AM_V_CXX       = $(am__v_CXX_$(V))
+
+am__v_AS_0     = @$(ECHO_E) "  $(am__v_color_cc)AS$(am__v_color_off)      " $@;
+am__v_AS_1     = 
+am__v_AS_      = $(am__v_AS_$(AM_DEFAULT_VERBOSITY))
+AM_V_AS        = $(am__v_AS_$(V))
+
+am__v_CPPAS_0  = @$(ECHO_E) "  $(am__v_color_cc)CPPAS$(am__v_color_off)   " $@;
+am__v_CPPAS_1  = 
+am__v_CPPAS_   = $(am__v_CPPAS_$(AM_DEFAULT_VERBOSITY))
+AM_V_CPPAS     = $(am__v_CPPAS_$(V))
+
+am__v_CCLD_0   = @$(ECHO_E) "  $(am__v_color_ld)CCLD$(am__v_color_off)    " $@;
+am__v_CCLD_1   = 
+am__v_CCLD_    = $(am__v_CCLD_$(AM_DEFAULT_VERBOSITY))
+AM_V_CCLD      = $(am__v_CCLD_$(V))
+
+am__v_CXXLD_0  = @$(ECHO_E) "  $(am__v_color_ld)CXXLD$(am__v_color_off)   " $@;
+am__v_CXXLD_1  = 
+am__v_CXXLD_   = $(am__v_CXXLD_$(AM_DEFAULT_VERBOSITY))
+AM_V_CXXLD     = $(am__v_CXXLD_$(V))
+
+am__v_AR_0     = @$(ECHO_E) "  $(am__v_color_ld)AR$(am__v_color_off)      " $@;
+am__v_AR_1     = 
+am__v_AR_      = $(am__v_AR_$(AM_DEFAULT_VERBOSITY))
+AM_V_AR        = $(am__v_AR_$(V))
+
+am__v_RANLIB_0 = @$(ECHO_E) "  $(am__v_color_ld)RANLIB$(am__v_color_off)  " $@;
+am__v_RANLIB_1 = 
+am__v_RANLIB_  = $(am__v_RANLIB_$(AM_DEFAULT_VERBOSITY))
+AM_V_RANLIB    = $(am__v_RANLIB_$(V))
+
+am__v_STRIP_0  = @$(ECHO_E) "  $(am__v_color_ld)STRIP$(am__v_color_off)   " $@;
+am__v_STRIP_1  = 
+am__v_STRIP_   = $(am__v_STRIP_$(AM_DEFAULT_VERBOSITY))
+AM_V_STRIP     = $(am__v_STRIP_$(V))
+
+am__v_GEN_0    = @echo "  GEN     " $@;
+am__v_GEN_1    = @echo generating $@;
+AM_V_GEN       = $(am__v_GEN_$(V))
+am__v_GEN_     = $(am__v_GEN_$(AM_DEFAULT_VERBOSITY))
+
+am__v_MSGFMT_0 = @echo "  MSGFMT  "
+am__v_MSGFMT_1 = @echo generating
+AM_V_MSGFMT    = $(am__v_MSGFMT_$(V))
+am__v_MSGFMT_  = $(am__v_MSGFMT_$(AM_DEFAULT_VERBOSITY))
+
+am__v_MAN_0    = @echo "  MAN   "
+am__v_MAN_1    = @echo formatting
+AM_V_MAN       = $(am__v_MAN_$(V))
+am__v_MAN_     = $(am__v_MAN_$(AM_DEFAULT_VERBOSITY))
+
+AM_V_at        = $(am__v_at_$(V))
+am__v_at_0     = @
+am__v_at_1     =
+am__v_at_      = $(am__v_at_$(AM_DEFAULT_VERBOSITY))
+
 all: all-here all-recursive
 
 clean:: clean-recursive
