--- a/cflib/Makefile.objs
+++ b/cflib/Makefile.objs
@@ -39,7 +39,7 @@ OBJS = $(COBJS:.c=.o) $(SOBJS:.S=.o)
 VPATH = ..
 
 objs: $(OBJS)
-	echo $(OBJS) > $@
+	$(AM_V_GEN)echo $(OBJS) > $@
 
 
 # default dependencies
